--- a/bitnami/jenkins/templates/deployment.yaml
+++ b/bitnami/jenkins/templates/deployment.yaml
@@ -41,8 +41,10 @@ spec:
           value: {{ .Values.jenkinsHome | quote }}
         - name: DISABLE_JENKINS_INITIALIZATION
           value: {{ .Values.disableInitialization | quote }}
+        {{- if .Values.javaOpts }}
         - name: JAVA_OPTS
           value: {{ .Values.javaOpts | quote }}
+        {{- end }}
         ports:
         - name: http
           containerPort: 8080
