--- a/bitnami/kubeapps/Chart.yaml
+++ b/bitnami/kubeapps/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: kubeapps
-version: 0.5.2
+version: 0.5.3
 appVersion: v1.0.0-beta.1
 description: Kubeapps is a dashboard for your Kubernetes cluster that makes it easy to deploy and manage applications in your cluster using Helm
 icon: https://raw.githubusercontent.com/kubeapps/kubeapps/master/docs/img/logo.png
@@ -13,7 +13,7 @@ home: https://kubeapps.com
 sources:
 - https://github.com/kubeapps/kubeapps
 maintainers:
-- name: bitnami-bot
+- name: Bitnami
   email: containers@bitnami.com
 - name: prydonius
   email: adnan@bitnami.com
