--- a/bitnami/tensorflow-resnet/templates/svc.yaml
+++ b/bitnami/tensorflow-resnet/templates/svc.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ template "fullname" . }}
   labels:
-    app: {{ template "fullname" . }}
+    app: {{ template "name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -13,4 +13,4 @@ spec:
   - port: {{ .Values.server.port }}
     protocol: TCP
   selector:
-    app: {{ template "fullname" . }}
+    app: {{ template "name" . }}
