--- a/bitnami/cassandra/values.yaml
+++ b/bitnami/cassandra/values.yaml
@@ -92,7 +92,7 @@ resources: {}
 ## Secret with keystore, keystore password, truststore, truststore password
 # tlsEncryptionSecretName:
 ## ConfigMap with custom cassandra configuration files. This overrides any other Cassandra configuration set in the chart
-# existingConfiguration: 
+# existingConfiguration:
 
 ## Cluster parameters
 ##
@@ -115,7 +115,7 @@ jvm:
   ##
   extraOpts:
 
-  ## Memory settings: These are calculated automatically 
+  ## Memory settings: These are calculated automatically
   ## unless specified otherwise
   ##
   # maxHeapSize: 4G
@@ -127,12 +127,12 @@ dbUser:
   user: cassandra
   forcePassword: false
   # password:
-  # existingSecret: 
+  # existingSecret:
 
 ## ConfigMap with cql scripts. Useful for creating a keyspace
 ## and pre-populating data
 ##
-# initDBConfigMap: 
+# initDBConfigMap:
 
 ## Liveness and Readiness probe values.
 ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/
@@ -211,7 +211,12 @@ metrics:
     pullPolicy: IfNotPresent
     repository: criteord/cassandra_exporter
     tag: 2.0.4
-    # pullSecrets: 
+    ## Optionally specify an array of imagePullSecrets.
+    ## Secrets must be manually created in the namespace.
+    ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+    ##
+    # pullSecrets:
+    #   - myRegistryKeySecretName
   resources: {}
   podAnnotations:
     prometheus.io/scrape: "true"
