[bitnami/harbor] Fix ingress access for Notary service
Signed-off-by: tompizmor <tompizmor@gmail.com>

--- a/bitnami/harbor/templates/notary/notary-svc.yaml
+++ b/bitnami/harbor/templates/notary/notary-svc.yaml
@@ -10,6 +10,7 @@ spec:
 {{- end }}
   ports:
   - port: 4443
+    targetPort: notary-server
   selector:
     {{ include "harbor.matchLabels" . | nindent 4 }}
     component: notary-server
