--- a/bitnami/memcached/values-production.yaml
+++ b/bitnami/memcached/values-production.yaml
@@ -84,8 +84,8 @@ metrics:
   enabled: true
   image:
     registry: docker.io
-    repository: prom/memcached-exporter
-    tag: v0.4.1
+    repository: bitnami/memcached-exporter
+    tag: 0.5.0-debian-9-r1
     pullPolicy: IfNotPresent
     ## Optionally specify an array of imagePullSecrets.
     ## Secrets must be manually created in the namespace.
