--- a/bitnami/magento/templates/externaldb-secrets.yaml
+++ b/bitnami/magento/templates/externaldb-secrets.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ template "magento.fullname" . }}-externaldb
   labels:
     app: {{ template "magento.fullname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ template "magento.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 type: Opaque
