--- a/bitnami/magento/templates/magento-pvc.yaml
+++ b/bitnami/magento/templates/magento-pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ template "magento.fullname" . }}-magento
   labels:
     app: {{ template "magento.fullname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ template "magento.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
