--- a/bitnami/magento/templates/svc.yaml
+++ b/bitnami/magento/templates/svc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ template "magento.fullname" . }}
   labels:
     app: {{ template "magento.fullname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ template "magento.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
